@@ -2,12 +2,13 @@
  *  NSDebug.c
  *  Cog
  *
- *  Created by Zaphod Beeblebrox on 5/30/05.
- *  Copyright 2005 __MyCompanyName__. All rights reserved.
+ *  Created by Vincent Spader on 5/30/05.
+ *  Copyright 2005 Vincent Spader All rights reserved.
  *
  */
 
 #include "DBLog.h"
+
 
 void DBLog(NSString *format, ...)
 {
