@@ -2,8 +2,8 @@
  *  NSDebug.h
  *  Cog
  *
- *  Created by Zaphod Beeblebrox on 5/30/05.
- *  Copyright 2005 __MyCompanyName__. All rights reserved.
+ *  Created by Vincent Spader on 5/30/05.
+ *  Copyright 2005 Vincent Spader All rights reserved.
  *
  */
 
