@@ -2,7 +2,7 @@
 //  main.m
 //  Cog
 //
-//  Created by Zaphod Beeblebrox on 5/7/05.
+//  Created by Vincent Spader on 5/7/05.
 //  Copyright __MyCompanyName__ 2005. All rights reserved.
 //
 
